<resources>
    <string name="app_name">Messenger</string>
    <string name="messenger">Messenger</string>
    <string name="write_email">Write email</string>
    <string name="Password">Password</string>
    <string name="write_password">Write password</string>
    <string name="forgot_password">forgot password</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="create_account">Create account</string>
    <string name="send_message">Send message</string>
    <string name="reset_password">Reset password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="the_reset_link_sent">The reset link has been successfully sent</string>
    <string name="john_smith_27">John Smith, 27</string>
    <string name="type_your_message">Type your message:</string>
</resources>